Upload project (work in progress)

--- a/src/main/resources/public/index.html
+++ b/src/main/resources/public/index.html
@@ -106,7 +106,7 @@
       </div>
       <div class="rewriterBarRight">
         or upload your code!
-        <input id="project" type="file" />
+        <input id="project" name="file" type="file" onchange="convertProject()" />
 
       </div>
 
