--- a/src/main/resources/public/index.html
+++ b/src/main/resources/public/index.html
@@ -13,7 +13,6 @@
         href=https://beam.apache.org/scss/main.min.7ff0c0c73ff6d2ce474cb3063173a68bfb86f2812932a3ef9a3e5aa91ffb53f3.css
         as=style>
   <link rel="stylesheet" href="rewriter.css">
-  <script src=rewriter.js></script>
 
   <link
       href=https://beam.apache.org/scss/main.min.7ff0c0c73ff6d2ce474cb3063173a68bfb86f2812932a3ef9a3e5aa91ffb53f3.css
@@ -112,7 +111,7 @@
 
       <div class="rewriterSnippet playground">
 
-              <textarea name="code" class="rewriterCode"
+              <div id="editor" class="rewriterCode"
               >package com.company.spark;
 
 import java.util.Arrays;
@@ -125,36 +124,35 @@ import scala.Tuple2;
 
 public class WordCounter {
 
-  private static void wordCount(String fileName) {
-    SparkConf sparkConf = new SparkConf().setMaster("local").setAppName("JD Word Counter")
-        .set("spark.driver.bindAddress", "127.0.0.1").set("spark.driver.host", "127.0.0.1");
-
-    JavaSparkContext sparkContext = new JavaSparkContext(sparkConf);
-
-    JavaRDD<String> inputFile = sparkContext.textFile(fileName);
-
-    JavaRDD<String> wordsFromFile = inputFile
-        .flatMap(
-            (String content) -> Arrays.stream(content.split(" ")).iterator())
-        .map(word -> word.replaceAll("[^a-zA-Z0-9]", ""))
-        .filter(word -> word.length() > 1);
-
-    JavaPairRDD<String, Integer> countData = wordsFromFile.mapToPair(t -> new Tuple2(t, 1))
-        .reduceByKey((x, y) -> (int) x + (int) y);
-
-    countData.saveAsTextFile("CountData/" + UUID.randomUUID());
-  }
-
   public static void main(String[] args) {
     if (args.length == 0) {
       System.out.println("No files provided.");
       System.exit(0);
     }
 
-    wordCount(args[0]);
-  }
+    SparkConf sparkConf = new SparkConf()
+                .setMaster("local")
+                .setAppName("JD Word Counter")
+                .set("spark.driver.bindAddress", "127.0.0.1")
+                .set("spark.driver.host", "127.0.0.1");
+
+    JavaSparkContext sparkContext = new JavaSparkContext(sparkConf);
+
+    JavaRDD<String> inputFile = sparkContext.textFile(fileName);
+
+      JavaRDD<String> wordsFromFile = inputFile
+        .flatMap(
+        (String content) -> Arrays.stream(content.split(" ")).iterator())
+        .map(word -> word.replaceAll("[^a-zA-Z0-9]", ""))
+        .filter(word -> word.length() > 1);
+
+        JavaPairRDD<String, Integer> countData = wordsFromFile.mapToPair(t -> new Tuple2(t, 1))
+        .reduceByKey((x, y) -> (int) x + (int) y);
+
+        countData.saveAsTextFile("CountData/" + UUID.randomUUID());
+      }
 }
-              </textarea>
+              </div>
       </div>
     </div>
   </div>
@@ -165,5 +163,12 @@ public class WordCounter {
     src=https://beam.apache.org/js/hero/hero-desktop.min.ffd24d183661ebb986f16d6393e87ba10c5ba1396572dd33d28aae3ad0a81220.js></script>
 <script
     src=https://beam.apache.org/js/hero/hero-mobile.min.1a7d982cbe0c7a5342f6cf1bd8cea1de3c74f177a0e837cd05300263f0d36212.js></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/ace/1.14.0/ace.min.js" integrity="sha512-s57ywpCtz+4PU992Bg1rDtr6+1z38gO2mS92agz2nqQcuMQ6IvgLWoQ2SFpImvg1rbgqBKeSEq0d9bo9NtBY0w==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/ace/1.14.0/mode-java.min.js" integrity="sha512-9sLk7tWIGr5qfK+01wNwgOr2Ocixnd6GKNE9X0W3eWkmSVi+Z4zqhV+xLYFlzAi6sFHUshXOJJ7TwdpqrOUZIw==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/ace/1.14.0/theme-xcode.min.js" integrity="sha512-bo2Y39IrrkTHpXjRo1kVhkpcW8/eusqqAF/KA3GxwxImB3qF9o7larxdStIVhvOcR2XvqBjmaJ2Fas/G/DVMTg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+
+<script src=rewriter.js></script>
+
+
 </body>
 </html>
