--- a/src/main/resources/public/index.html
+++ b/src/main/resources/public/index.html
@@ -5,7 +5,7 @@
   <meta charset=utf-8>
   <meta http-equiv=x-ua-compatible content="IE=edge">
   <meta name=viewport content="width=device-width,initial-scale=1">
-  <title>Apache Beam</title>
+  <title>Beam Cookbooks</title>
   <meta name=description
         content="Apache Beam is an open source, unified model and set of language-specific SDKs for defining and executing data processing workflows, and also data ingestion and integration flows, supporting Enterprise Integration Patterns (EIPs) and Domain Specific Languages (DSLs). Dataflow pipelines simplify the mechanics of large-scale batch and streaming data processing and can run on a number of runtimes like Apache Flink, Apache Spark, and Google Cloud Dataflow (a cloud service). Beam also brings DSL in different languages, allowing users to easily implement their data integration processes.">
   <link href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700" rel=stylesheet>
@@ -52,11 +52,13 @@
   <link rel=stylesheet href=https://unpkg.com/swiper@8/swiper-bundle.min.css>
 <body class="body body--index">
 
-<nav class=navigation-bar-desktop><a href=https://beam.apache.org/ class=navbar-logo><img
+<nav class=navigation-bar-desktop> <a href=https://beam.apache.org/ class=navbar-logo>
+  <img
     src=https://beam.apache.org/images/beam_logo_navbar.png
     alt="Beam Logo"></a>
   <div class=navbar-bar-left>
-    <div class=navbar-links><a class=navbar-link href=/>Rewriter</a>
+    <div class=navbar-links><a class=navbar-link href=/ style="font-size: 18px;">
+      Cookbooks</a>
     </div>
   </div>
 </nav>
@@ -64,10 +66,16 @@
 <div class="body__contained no__padding">
   <div id=hero-desktop class=hero-desktop>
     <div class=hero-content>
-      <h1>Introducing Beam Rewriter</h1>
+
+      <h1>Beam Cookbooks</h1>
+
+      <img src="beam_mascot_500x500_chef.png" width="200" style="margin-top: -80px; margin-bottom: 20px;">
+
       <h2>The easiest way to convert your data processing workloads to the Unified Apache Beam
         model.</h2><a
-        href=#try-rewriter>
+        href=#try-cookbooks>
+
+
       <button>
         <svg xmlns="http://www.w3.org/2000/svg" width="16" height="18" fill="none"
              viewBox="0 0 16 18">
@@ -77,27 +85,20 @@
         <span>Try now</span></button>
     </a></div>
   </div>
-  <div id=hero-mobile class=hero-mobile>
-    <div class=hero-content><h3>Introducing Apache Beam</h3>
-      <h1>The Unified Apache Beam Model</h1>
-      <h2>The easiest way to do batch and streaming data processing. Write once, run anywhere data
-        processing for mission-critical production workloads.</h2></div>
-  </div>
 
-  <div id="try-rewriter" class="body__contained body__section-nav playground-section">
-    <h1>Try Beam
-      Rewriter</h1>
-    <p>Beam Rewriter is an interactive environment to convert data processing workloads to Beam
-      transforms without having to install Apache Beam in your environment.
-      After rewriting, you can try the Apache Beam code at <a href=https://play.beam.apache.org/>Beam
+  <div id="try-cookbooks" class="body__contained body__section-nav playground-section">
+    <h1>Try Beam Cookbooks</h1>
+    <p>Beam Cookbooks is an interactive environment to convert data processing workloads to Beam
+      without having to install Apache Beam in your environment. After rewriting, you can try the
+      Apache Beam code at <a href=https://play.beam.apache.org/>Beam
         Playground
         (Beta)</a>.</p><br><br><a class=playground__mobile href=https://play.beam.apache.org/><img
       src=https://beam.apache.org/images/playground.png alt="beam playground"></a>
     <div>
 
       <div class="rewriterBar">
-        <strong>Cookbook:</strong>
-        <select name="cookbook" class="cookbookChoice">
+        <label for="cookbook"><strong>Cookbook:</strong></label>
+        <select id="cookbook" name="cookbook" class="cookbookChoice">
           <option value="spark">Apache Spark to Apache Beam</option>
           <option value="flink">Apache Spark to Apache Flink</option>
         </select>
@@ -105,14 +106,13 @@
       </div>
       <div class="rewriterBarRight">
         or upload your code!
-        <input id="project" name="file" type="file" onchange="convertProject()" />
+        <input id="project" name="file" type="file" onchange="convertProject()"/>
 
       </div>
 
       <div class="rewriterSnippet playground">
 
-              <div id="editor" class="rewriterCode"
-              >package com.company.spark;
+        <div id="editor" class="rewriterCode">package com.company.spark;
 
 import java.util.Arrays;
 import java.util.UUID;
@@ -124,48 +124,76 @@ import scala.Tuple2;
 
 public class WordCounter {
 
+  private static final String FILE_NAME = "samples/shakespeare.txt";
+
   public static void main(String[] args) {
-    if (args.length == 0) {
-      System.out.println("No files provided.");
-      System.exit(0);
-    }
 
     SparkConf sparkConf = new SparkConf()
-                .setMaster("local")
-                .setAppName("JD Word Counter")
-                .set("spark.driver.bindAddress", "127.0.0.1")
-                .set("spark.driver.host", "127.0.0.1");
+        .setMaster("local")
+        .setAppName("WordCount Sample")
+        .set("spark.driver.bindAddress", "127.0.0.1")
+        .set("spark.driver.host", "127.0.0.1");
 
     JavaSparkContext sparkContext = new JavaSparkContext(sparkConf);
 
-    JavaRDD<String> inputFile = sparkContext.textFile(fileName);
+    JavaRDD&lt;String&gt; inputFile = sparkContext.textFile(FILE_NAME);
 
-      JavaRDD<String> wordsFromFile = inputFile
-        .flatMap(
-        (String content) -> Arrays.stream(content.split(" ")).iterator())
-        .map(word -> word.replaceAll("[^a-zA-Z0-9]", ""))
-        .filter(word -> word.length() > 1);
+    JavaRDD&lt;String&gt; wordsFromFile = inputFile
+        .flatMap(content -&gt; Arrays.stream(content.split(" ")).iterator())
+        .map(word -&gt; word.replaceAll("[^a-zA-Z0-9]", ""))
+        .filter(word -&gt; word.length() &gt; 1);
 
-        JavaPairRDD<String, Integer> countData = wordsFromFile.mapToPair(t -> new Tuple2(t, 1))
-        .reduceByKey((x, y) -> (int) x + (int) y);
+    JavaPairRDD&lt;String, Integer&gt; countData = wordsFromFile.mapToPair(t -&gt; new Tuple2&lt;&gt;(t, 1))
+        .reduceByKey((x, y) -&gt; x + y);
 
-        countData.saveAsTextFile("CountData/" + UUID.randomUUID());
-      }
+    countData.saveAsTextFile("target/CountData/" + UUID.randomUUID());
+  }
 }
-              </div>
+        </div>
       </div>
     </div>
   </div>
 </div>
+<div class=main-padding>
+  <footer class=footer>
+    <div class=footer__contained>
+      <div class=footer__cols>
+        <div class="footer__cols__col footer__cols__col__logos">
+        </div>
+        <div class=footer-wrapper>
+          <div class=footer__bottom>&copy;
+            <a href=https://www.apache.org>The Apache Software Foundation</a>
+            | <a href=https://beam.apache.org/privacy_policy>Privacy Policy</a>
+
+            <br><br>
+
+            Apache Beam, Apache, Beam, the Beam logo, and
+            the Apache feather logo are either registered trademarks or trademarks of The Apache
+            Software Foundation. All other products or name brands are trademarks of their
+            respective holders, including The Apache Software Foundation.
+          </div>
+        </div>
+      </div>
+    </div>
+  </footer>
+</div>
+
+
 <script
     src=https://beam.apache.org/js/hero/lottie-light.min.min.a950edd525eba16dd54da3844c6ec190bc2a233e1b59d405bd01a99fdbf43096.js></script>
 <script
     src=https://beam.apache.org/js/hero/hero-desktop.min.ffd24d183661ebb986f16d6393e87ba10c5ba1396572dd33d28aae3ad0a81220.js></script>
 <script
     src=https://beam.apache.org/js/hero/hero-mobile.min.1a7d982cbe0c7a5342f6cf1bd8cea1de3c74f177a0e837cd05300263f0d36212.js></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/ace/1.14.0/ace.min.js" integrity="sha512-s57ywpCtz+4PU992Bg1rDtr6+1z38gO2mS92agz2nqQcuMQ6IvgLWoQ2SFpImvg1rbgqBKeSEq0d9bo9NtBY0w==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/ace/1.14.0/mode-java.min.js" integrity="sha512-9sLk7tWIGr5qfK+01wNwgOr2Ocixnd6GKNE9X0W3eWkmSVi+Z4zqhV+xLYFlzAi6sFHUshXOJJ7TwdpqrOUZIw==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/ace/1.14.0/theme-xcode.min.js" integrity="sha512-bo2Y39IrrkTHpXjRo1kVhkpcW8/eusqqAF/KA3GxwxImB3qF9o7larxdStIVhvOcR2XvqBjmaJ2Fas/G/DVMTg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/ace/1.14.0/ace.min.js"
+        integrity="sha512-s57ywpCtz+4PU992Bg1rDtr6+1z38gO2mS92agz2nqQcuMQ6IvgLWoQ2SFpImvg1rbgqBKeSEq0d9bo9NtBY0w=="
+        crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/ace/1.14.0/mode-java.min.js"
+        integrity="sha512-9sLk7tWIGr5qfK+01wNwgOr2Ocixnd6GKNE9X0W3eWkmSVi+Z4zqhV+xLYFlzAi6sFHUshXOJJ7TwdpqrOUZIw=="
+        crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/ace/1.14.0/theme-xcode.min.js"
+        integrity="sha512-bo2Y39IrrkTHpXjRo1kVhkpcW8/eusqqAF/KA3GxwxImB3qF9o7larxdStIVhvOcR2XvqBjmaJ2Fas/G/DVMTg=="
+        crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 
 <script src=rewriter.js></script>
 
