Improving Spark recipes, format, cleanups

--- a/src/main/resources/public/index.html
+++ b/src/main/resources/public/index.html
@@ -1,61 +1,61 @@
 <!doctype html>
-<html lang=en class=no-js>
+<html class=no-js lang=en>
 <head>
-  <meta name=generator content="Hugo 0.68.3">
+  <meta content="Hugo 0.68.3" name=generator>
   <meta charset=utf-8>
-  <meta http-equiv=x-ua-compatible content="IE=edge">
-  <meta name=viewport content="width=device-width,initial-scale=1">
+  <meta content="IE=edge" http-equiv=x-ua-compatible>
+  <meta content="width=device-width,initial-scale=1" name=viewport>
   <title>Beam Cookbooks</title>
-  <meta name=description
-        content="Apache Beam is an open source, unified model and set of language-specific SDKs for defining and executing data processing workflows, and also data ingestion and integration flows, supporting Enterprise Integration Patterns (EIPs) and Domain Specific Languages (DSLs). Dataflow pipelines simplify the mechanics of large-scale batch and streaming data processing and can run on a number of runtimes like Apache Flink, Apache Spark, and Google Cloud Dataflow (a cloud service). Beam also brings DSL in different languages, allowing users to easily implement their data integration processes.">
+  <meta content="Apache Beam is an open source, unified model and set of language-specific SDKs for defining and executing data processing workflows, and also data ingestion and integration flows, supporting Enterprise Integration Patterns (EIPs) and Domain Specific Languages (DSLs). Dataflow pipelines simplify the mechanics of large-scale batch and streaming data processing and can run on a number of runtimes like Apache Flink, Apache Spark, and Google Cloud Dataflow (a cloud service). Beam also brings DSL in different languages, allowing users to easily implement their data integration processes."
+        name=description>
   <link href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700" rel=stylesheet>
-  <link rel=preload
+  <link as=style
         href=https://beam.apache.org/scss/main.min.7ff0c0c73ff6d2ce474cb3063173a68bfb86f2812932a3ef9a3e5aa91ffb53f3.css
-        as=style>
-  <link rel="stylesheet" href="rewriter.css">
+        rel=preload>
+  <link href="rewriter.css" rel="stylesheet">
 
   <link
       href=https://beam.apache.org/scss/main.min.7ff0c0c73ff6d2ce474cb3063173a68bfb86f2812932a3ef9a3e5aa91ffb53f3.css
-      rel=stylesheet integrity>
+      integrity rel=stylesheet>
   <script src=https://code.jquery.com/jquery-2.2.4.min.js></script>
   <style>.body__contained img {
     max-width: 100%
   }</style>
-  <script type=text/javascript
+  <script defer
           src=https://beam.apache.org/js/bootstrap.min.2979f9a6e32fc42c3e7406339ee9fe76b31d1b52059776a02b4a7fa6a4fd280a.js
-          defer></script>
-  <script type=text/javascript
+          type=text/javascript></script>
+  <script defer
           src=https://beam.apache.org/js/language-switch-v2.min.d04e476c3e22e59d8fb23f93b4f17acf1b12da97977e9a7ac9941b08e8ce902d.js
-          defer></script>
-  <script type=text/javascript
+          type=text/javascript></script>
+  <script defer
           src=https://beam.apache.org/js/section-nav.min.8c5356fa02e287ef99bfc8e2eee4d4f770e8d16de8fb3c1ba7c755567e7d90bd.js
-          defer></script>
-  <script type=text/javascript
+          type=text/javascript></script>
+  <script defer
           src=https://beam.apache.org/js/expandable-list.min.906430196d9dc7c180eecc10131d3e929d1ffc224d695a2e2b4c4e1d3bb11043.js
-          defer></script>
-  <script type=text/javascript
+          type=text/javascript></script>
+  <script defer
           src=https://beam.apache.org/js/copy-to-clipboard.min.6f7b934c71100fcc419043b60c42e5181ba6c62b1ed76ec857d2b4cdc815b2a6.js
-          defer></script>
-  <script type=text/javascript
+          type=text/javascript></script>
+  <script defer
           src=https://beam.apache.org/js/calendar.min.430bec36c3b3f6f39206f4abbd1ab42f75a71e557a1fe8e43dbca15cf09cace3.js
-          defer></script>
-  <script type=text/javascript
+          type=text/javascript></script>
+  <script defer
           src=https://beam.apache.org/js/fix-playground-nested-scroll.min.d636da77fee5f53da36a0eff0539f472c9be3c772accf1b37f64d38f09d8957c.js
-          defer></script>
-  <link rel=alternate type=application/rss+xml title="Apache Beam"
-        href=https://beam.apache.org/feed.xml>
-  <link rel=canonical href=https://beam.apache.org/ data-proofer-ignore>
-  <link rel="shortcut icon" type=image/x-icon href=https://beam.apache.org/images/favicon.ico>
-  <link rel=stylesheet href=https://use.fontawesome.com/releases/v5.4.1/css/all.css
+          type=text/javascript></script>
+  <link href=https://beam.apache.org/feed.xml rel=alternate title="Apache Beam"
+        type=application/rss+xml>
+  <link href=https://beam.apache.org/ data-proofer-ignore rel=canonical>
+  <link href=https://beam.apache.org/images/favicon.ico rel="shortcut icon" type=image/x-icon>
+  <link crossorigin=anonymous href=https://use.fontawesome.com/releases/v5.4.1/css/all.css
         integrity=sha384-5sAR7xN1Nv6T6+dT2mhtzEpVJvfS3NScPQTrOxhwjIuvcA67KV2R5Jz6kr4abQsz
-        crossorigin=anonymous>
-  <link rel=stylesheet href=https://unpkg.com/swiper@8/swiper-bundle.min.css>
+        rel=stylesheet>
+  <link href=https://unpkg.com/swiper@8/swiper-bundle.min.css rel=stylesheet>
 <body class="body body--index">
 
-<nav class=navigation-bar-desktop> <a href=https://beam.apache.org/ class=navbar-logo>
+<nav class=navigation-bar-desktop><a href=https://beam.apache.org/ class=navbar-logo>
   <img
-    src=https://beam.apache.org/images/beam_logo_navbar.png
-    alt="Beam Logo"></a>
+      alt="Beam Logo"
+      src=https://beam.apache.org/images/beam_logo_navbar.png></a>
   <div class=navbar-bar-left>
     <div class=navbar-links><a class=navbar-link href=/ style="font-size: 18px;">
       Cookbooks</a>
@@ -64,12 +64,13 @@
 </nav>
 
 <div class="body__contained no__padding">
-  <div id=hero-desktop class=hero-desktop>
+  <div class=hero-desktop id=hero-desktop>
     <div class=hero-content>
 
       <h1>Beam Cookbooks</h1>
 
-      <img src="beam_mascot_500x500_chef.png" width="200" style="margin-top: -80px; margin-bottom: 20px;">
+      <img src="beam_mascot_500x500_chef.png" style="margin-top: -80px; margin-bottom: 20px;"
+           width="200">
 
       <h2>The easiest way to convert your data processing workloads to the Unified Apache Beam
         model.</h2><a
@@ -77,28 +78,28 @@
 
 
       <button>
-        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="18" fill="none"
-             viewBox="0 0 16 18">
-          <path stroke="#f26628" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-                d="M1 13v2c0 .53.184 1.04.513 1.414.328.375.773.586 1.237.586h10.5c.464.0.91-.21 1.237-.586.329-.375.513-.884.513-1.414v-2M3 7l5 5 5-5M8 1v11"/>
+        <svg fill="none" height="18" viewBox="0 0 16 18" width="16"
+             xmlns="http://www.w3.org/2000/svg">
+          <path d="M1 13v2c0 .53.184 1.04.513 1.414.328.375.773.586 1.237.586h10.5c.464.0.91-.21 1.237-.586.329-.375.513-.884.513-1.414v-2M3 7l5 5 5-5M8 1v11" stroke="#f26628" stroke-linecap="round" stroke-linejoin="round"
+                stroke-width="2"/>
         </svg>
         <span>Try now</span></button>
     </a></div>
   </div>
 
-  <div id="try-cookbooks" class="body__contained body__section-nav playground-section">
+  <div class="body__contained body__section-nav playground-section" id="try-cookbooks">
     <h1>Try Beam Cookbooks</h1>
     <p>Beam Cookbooks is an interactive environment to convert data processing workloads to Beam
       without having to install Apache Beam in your environment. After rewriting, you can try the
       Apache Beam code at <a href=https://play.beam.apache.org/>Beam
         Playground
         (Beta)</a>.</p><br><br><a class=playground__mobile href=https://play.beam.apache.org/><img
-      src=https://beam.apache.org/images/playground.png alt="beam playground"></a>
+      alt="beam playground" src=https://beam.apache.org/images/playground.png></a>
     <div>
 
       <div class="rewriterBar">
         <label for="cookbook"><strong>Cookbook:</strong></label>
-        <select id="cookbook" name="cookbook" class="cookbookChoice">
+        <select class="cookbookChoice" id="cookbook" name="cookbook">
           <option value="spark">Apache Spark to Apache Beam</option>
           <option value="flink">Apache Spark to Apache Flink</option>
         </select>
@@ -106,49 +107,50 @@
       </div>
       <div class="rewriterBarRight">
         or upload your code!
-        <input id="project" name="file" type="file" onchange="convertProject()"/>
+        <input id="project" name="file" onchange="convertProject()" type="file"/>
 
       </div>
 
       <div class="rewriterSnippet playground">
 
-        <div id="editor" class="rewriterCode">package com.company.spark;
+        <div class="rewriterCode" id="editor">package com.company.spark;
 
-import java.util.Arrays;
-import java.util.UUID;
-import org.apache.spark.SparkConf;
-import org.apache.spark.api.java.JavaPairRDD;
-import org.apache.spark.api.java.JavaRDD;
-import org.apache.spark.api.java.JavaSparkContext;
-import scala.Tuple2;
+          import java.util.Arrays;
+          import java.util.UUID;
+          import org.apache.spark.SparkConf;
+          import org.apache.spark.api.java.JavaPairRDD;
+          import org.apache.spark.api.java.JavaRDD;
+          import org.apache.spark.api.java.JavaSparkContext;
+          import scala.Tuple2;
 
-public class WordCounter {
+          public class WordCounter {
 
-  private static final String FILE_NAME = "samples/shakespeare.txt";
+          private static final String FILE_NAME = "samples/shakespeare.txt";
 
-  public static void main(String[] args) {
+          public static void main(String[] args) {
 
-    SparkConf sparkConf = new SparkConf()
-        .setMaster("local")
-        .setAppName("WordCount Sample")
-        .set("spark.driver.bindAddress", "127.0.0.1")
-        .set("spark.driver.host", "127.0.0.1");
+          SparkConf sparkConf = new SparkConf()
+          .setMaster("local")
+          .setAppName("WordCount Sample")
+          .set("spark.driver.bindAddress", "127.0.0.1")
+          .set("spark.driver.host", "127.0.0.1");
 
-    JavaSparkContext sparkContext = new JavaSparkContext(sparkConf);
+          JavaSparkContext sparkContext = new JavaSparkContext(sparkConf);
 
-    JavaRDD&lt;String&gt; inputFile = sparkContext.textFile(FILE_NAME);
+          JavaRDD&lt;String&gt; inputFile = sparkContext.textFile(FILE_NAME);
 
-    JavaRDD&lt;String&gt; wordsFromFile = inputFile
-        .flatMap(content -&gt; Arrays.stream(content.split(" ")).iterator())
-        .map(word -&gt; word.replaceAll("[^a-zA-Z0-9]", ""))
-        .filter(word -&gt; word.length() &gt; 1);
+          JavaRDD&lt;String&gt; wordsFromFile = inputFile
+          .flatMap(content -&gt; Arrays.stream(content.split(" ")).iterator())
+          .map(word -&gt; word.replaceAll("[^a-zA-Z0-9]", ""))
+          .filter(word -&gt; word.length() &gt; 1);
 
-    JavaPairRDD&lt;String, Integer&gt; countData = wordsFromFile.mapToPair(t -&gt; new Tuple2&lt;&gt;(t, 1))
-        .reduceByKey((x, y) -&gt; x + y);
+          JavaPairRDD&lt;String, Integer&gt; countData = wordsFromFile.mapToPair(t -&gt; new Tuple2&lt;&gt;(t,
+          1))
+          .reduceByKey((x, y) -&gt; x + y);
 
-    countData.saveAsTextFile("target/CountData/" + UUID.randomUUID());
-  }
-}
+          countData.saveAsTextFile("target/CountData/" + UUID.randomUUID());
+          }
+          }
         </div>
       </div>
     </div>
@@ -185,15 +187,15 @@ public class WordCounter {
     src=https://beam.apache.org/js/hero/hero-desktop.min.ffd24d183661ebb986f16d6393e87ba10c5ba1396572dd33d28aae3ad0a81220.js></script>
 <script
     src=https://beam.apache.org/js/hero/hero-mobile.min.1a7d982cbe0c7a5342f6cf1bd8cea1de3c74f177a0e837cd05300263f0d36212.js></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/ace/1.14.0/ace.min.js"
+<script crossorigin="anonymous"
         integrity="sha512-s57ywpCtz+4PU992Bg1rDtr6+1z38gO2mS92agz2nqQcuMQ6IvgLWoQ2SFpImvg1rbgqBKeSEq0d9bo9NtBY0w=="
-        crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/ace/1.14.0/mode-java.min.js"
+        referrerpolicy="no-referrer" src="https://cdnjs.cloudflare.com/ajax/libs/ace/1.14.0/ace.min.js"></script>
+<script crossorigin="anonymous"
         integrity="sha512-9sLk7tWIGr5qfK+01wNwgOr2Ocixnd6GKNE9X0W3eWkmSVi+Z4zqhV+xLYFlzAi6sFHUshXOJJ7TwdpqrOUZIw=="
-        crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/ace/1.14.0/theme-xcode.min.js"
+        referrerpolicy="no-referrer" src="https://cdnjs.cloudflare.com/ajax/libs/ace/1.14.0/mode-java.min.js"></script>
+<script crossorigin="anonymous"
         integrity="sha512-bo2Y39IrrkTHpXjRo1kVhkpcW8/eusqqAF/KA3GxwxImB3qF9o7larxdStIVhvOcR2XvqBjmaJ2Fas/G/DVMTg=="
-        crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+        referrerpolicy="no-referrer" src="https://cdnjs.cloudflare.com/ajax/libs/ace/1.14.0/theme-xcode.min.js"></script>
 
 <script src=rewriter.js></script>
 
