More Spark recipes

--- a/src/main/resources/public/index.html
+++ b/src/main/resources/public/index.html
@@ -115,42 +115,44 @@
 
         <div class="rewriterCode" id="editor">package com.company.spark;
 
-          import java.util.Arrays;
-          import java.util.UUID;
-          import org.apache.spark.SparkConf;
-          import org.apache.spark.api.java.JavaPairRDD;
-          import org.apache.spark.api.java.JavaRDD;
-          import org.apache.spark.api.java.JavaSparkContext;
-          import scala.Tuple2;
+import java.util.Arrays;
+import java.util.UUID;
+import org.apache.spark.SparkConf;
+import org.apache.spark.api.java.JavaPairRDD;
+import org.apache.spark.api.java.JavaRDD;
+import org.apache.spark.api.java.JavaSparkContext;
+import scala.Tuple2;
 
-          public class WordCounter {
+public class WordCounter {
 
-          private static final String FILE_NAME = "samples/shakespeare.txt";
+  private static final String FILE_NAME = "samples/shakespeare.txt";
 
-          public static void main(String[] args) {
+  public static void main(String[] args) {
 
-          SparkConf sparkConf = new SparkConf()
-          .setMaster("local")
-          .setAppName("WordCount Sample")
-          .set("spark.driver.bindAddress", "127.0.0.1")
-          .set("spark.driver.host", "127.0.0.1");
+    SparkConf sparkConf =
+        new SparkConf()
+            .setMaster("local")
+            .setAppName("WordCount Sample")
+            .set("spark.driver.bindAddress", "127.0.0.1")
+            .set("spark.driver.host", "127.0.0.1");
 
-          JavaSparkContext sparkContext = new JavaSparkContext(sparkConf);
+    JavaSparkContext sparkContext = new JavaSparkContext(sparkConf);
 
-          JavaRDD&lt;String&gt; inputFile = sparkContext.textFile(FILE_NAME);
+    JavaRDD&lt;String&gt; inputFile = sparkContext.textFile(FILE_NAME);
 
-          JavaRDD&lt;String&gt; wordsFromFile = inputFile
-          .flatMap(content -&gt; Arrays.stream(content.split(" ")).iterator())
-          .map(word -&gt; word.replaceAll("[^a-zA-Z0-9]", ""))
-          .filter(word -&gt; word.length() &gt; 1);
+    JavaRDD&lt;String&gt; wordsFromFile =
+        inputFile
+            .flatMap(content -&gt; Arrays.stream(content.split(" ")).iterator())
+            .map(word -&gt; word.replaceAll("[^a-zA-Z0-9]", ""))
+            .filter(word -&gt; word.length() &gt; 1);
 
-          JavaPairRDD&lt;String, Integer&gt; countData = wordsFromFile.mapToPair(t -&gt; new Tuple2&lt;&gt;(t,
-          1))
-          .reduceByKey((x, y) -&gt; x + y);
+    JavaPairRDD&lt;String, Integer&gt; countData =
+        wordsFromFile.mapToPair(t -&gt; new Tuple2&lt;&gt;(t, 1)).reduceByKey((x, y) -&gt; x + y);
 
-          countData.saveAsTextFile("target/CountData/" + UUID.randomUUID());
-          }
-          }
+    countData.map(t2 -&gt; t2._1 + "," + t2._2).saveAsTextFile("target/CountData/" + UUID.randomUUID());
+  }
+}
+
         </div>
       </div>
     </div>
