--- a/src/main/resources/public/index.html
+++ b/src/main/resources/public/index.html
@@ -72,10 +72,9 @@
       <img src="beam_mascot_500x500_chef.png" style="margin-top: -80px; margin-bottom: 20px;"
            width="200">
 
-      <h2>The easiest way to convert your data processing workloads to the Unified Apache Beam
+      <h2>The easiest way to prepare your data processing workloads to the Unified Apache Beam
         model.</h2><a
         href=#try-cookbooks>
-
 
       <button>
         <svg fill="none" height="18" viewBox="0 0 16 18" width="16"
@@ -114,7 +113,7 @@
 
       </div>
 
-      <img id="loader" class="loader" style="display: none;" src="cooking.gif" height="250"/>
+      <img id="loader" class="loader" style="display: none;" src="cooking1.gif" height="250"/>
 
       <div class="rewriterSnippet playground">
         <div class="rewriterCode" id="editor">import java.util.Arrays;
