--- a/src/main/resources/public/index.html
+++ b/src/main/resources/public/index.html
@@ -10,12 +10,12 @@
         name=description>
   <link href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700" rel=stylesheet>
   <link as=style
-        href=https://beam.apache.org/scss/main.min.7ff0c0c73ff6d2ce474cb3063173a68bfb86f2812932a3ef9a3e5aa91ffb53f3.css
+        href=bootstrap.css
         rel=preload>
   <link href="rewriter.css" rel="stylesheet">
 
   <link
-      href=https://beam.apache.org/scss/main.min.7ff0c0c73ff6d2ce474cb3063173a68bfb86f2812932a3ef9a3e5aa91ffb53f3.css
+      href=bootstrap.css
       integrity rel=stylesheet>
   <script src=https://code.jquery.com/jquery-2.2.4.min.js></script>
   <style>.body__contained img {
